k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-mysql
  labels:
    app: go
spec:
  ports:
    - port: 3306
  selector:
    app: go
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-mysql
  labels:
    app: go
spec:
  selector:
    matchLabels:
      app: go
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: go
        tier: mysql
    spec:
      containers:
        - image: noncaffeinefree/mysql:1.0.0
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
