k8s/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - port: 80
  selector:
    app: nginx
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
    spec:
      containers:
        - image: noncaffeinefree/nginx:1.0.0
          name: nginx
          ports:
            - containerPort: 80
              name: nginx
          volumeMounts:
            - name: nginx-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: nginx-persistent-storage
          persistentVolumeClaim:
            claimName: nx-pv-claim
