k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ucwork.local
  annotations:
    nginx.org/server-snippet: "proxy_ssl_verify off;"
spec:
  rules:
    - host: nginx.ucwork.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: go.ucwork.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: go
                port:
                  number: 8080
